Fix card close button alignment

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -40,7 +40,7 @@
 
   .vui-card-header {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-between;
     padding: var(--space-s) var(--space-m);
     background-color: var(--color-bg);
